# zap

./: .gitignore  LICENSE  README.md  auto-imports.d.ts  components.d.ts  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0004_init.sql
src-tauri/src/: error.rs  lib.rs  main.rs  sqlite.rs  tray.rs
src-tauri/src/commands/: categories.rs  daily_focus.rs  mod.rs  statistics.rs  task.rs  types.rs
src-tauri/tests/: categories.rs  common.rs  task.rs  test_task.rs
src/components/: AddTaskModal.vue  StatsView.vue  TaskItem.vue  TodayFocus.vue
src/composables/: useTasks.ts
src/utils/: color.ts  time.ts
