[package]
name = "zap"
version = "0.1.0"
description = "A Tauri App"
authors = ["CaroLe <470481357@qq.com>"]
license = "MIT OR Apache-2.0"
repository = ""
edition = "2024"
rust-version = "1.92.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2.8.0"
thiserror = "2.0.17"

[dependencies.sqlx]
version = "0.8.6"
features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"]
